--- a/css/home.css
+++ b/css/home.css
@@ -5,13 +5,15 @@ img{
 }
 
 .homeFrame{
-    padding-top: 25px;
+    padding-top: 30px;
+    buffer-bottom: 50px;
+
 }
 
 .card{
     min-height:100%;
     border: groove;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
 
 .cardTop{
@@ -23,12 +25,7 @@ img{
     font-size: 2.6vh;
     font-weight: bold;
 }
-.venue {
-    font-size: 13px;
-    padding-left: 3px;
-    color: #963620;
 
-}
 
 .avatar {
     position: absolute;
@@ -87,4 +84,10 @@ img{
     margin-bottom: -60px;
     margin-top: -45px;
     z-index: -1000;
+}
+
+.venue{
+    padding-left: 2px;
+    color: #963620;
+    font-size: 13px;
 }
