--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -19,25 +19,25 @@
         <br/>
 
         <span> Unite House -
-        <a ng-click = 'showConfirm("07717701058","University Security")'>07717701058</a>
+        <a class = "link" ng-click = 'showConfirm("07717701058","University Security")'>07717701058</a>
         </span>
 
         <br/>
 
         <span> Colston Street: -
-        <a ng-click = 'showConfirm("07815700570","University Security")'>07815700570</a>
+        <a class = "link" ng-click = 'showConfirm("07815700570","University Security")'>07815700570</a>
         </span>
 
         <br/><br/>
 
         <span> University Security -
-        <a ng-click = 'showConfirm("0117 928 7848","University Security")'>0117 928 7848</a>
+        <a class = "link" ng-click = 'showConfirm("0117 928 7848","University Security")'>0117 928 7848</a>
         </span>
 
         <br/>
         <br/>
         <span> Security Services <b>Website</b>:
-        <div ng-controller="HomeCtrl"> <a ng-click = "changeLinkImages('https://www.bristol.ac.uk/securityservices/','contact')">http://www.bristol.ac.uk/securityservices/ </a></div>
+        <div class = "link" ng-controller="HomeCtrl"> <a ng-click = "changeLinkImages('https://www.bristol.ac.uk/securityservices/','contact')">http://www.bristol.ac.uk/securityservices/ </a></div>
         </span>
       </div>
 
