--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
                                 <span class="cardTitle">{{card.title}}</span>
                                 <br/>
                                 <a id = "maps" ng-href="https://www.google.co.uk/maps/search/" ng-click="changeLinkMaps(card.location)" >
-                                    <i class="icon ion-ios-location custom-locationIcon"></i><span class="venue">{{card.venue}}</span>
+                                    <i class="icon ion-ios-location custom-locationIcon"></i><span><a class="venue">{{card.venue}}</a></span>
                                 </a>
                         </div>
                     </div>
