--- a/templates/jcr.html
+++ b/templates/jcr.html
@@ -25,7 +25,7 @@
             The committee play an integral part in the student community by representing their fellow students and working with the Senior Common Room (Warden, Student Support Administrator and Senior Residents) to run varied sports, social, charity and environmental events. They also work with the SCR and Students’ Union in representing any issues that may arise at their residences.
             <br/>
             <br/>
-            <div ng-controller ='HomeCtrl'>Keep up to date with all JCR activities by joining the official <a id = "jcr" ng-click ="changeLinkImages('https://www.facebook.com/groups/521020464709928/','jcr')">CCL JCR Facebook</a> group.</div>
+            <div ng-controller ='HomeCtrl'>Keep up to date with all JCR activities by joining the official <a class = "link" ng-click ="changeLinkImages('https://www.facebook.com/groups/521020464709928/','jcr')">CCL JCR Facebook</a> group.</div>
             </div>
         </div>
     </ion-content>
