--- a/css/welcomePopup.css
+++ b/css/welcomePopup.css
@@ -5,6 +5,23 @@
     font-size: 20px;
 }
 
+.modal {
+    text-align: center;
+}
+
+.modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+}
+
+.modal-dialog {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+}
+
 .center-modal {
     position: absolute;
     padding: 15%;
@@ -14,18 +31,28 @@
     width: 100%;
     height: 80%;
     background: transparent;
+
 }
 
 #header {
-    background-color:black;
+    background-color: #000000;
     color:white;
     text-align:center;
-    padding:5px;
+    padding:7px;
     font-size: 4vh;
+    /*border-bottom: groove;*/
+
+
 }
 
 #section {
     float:left;
     padding:10px;
     background:#a91f1d;
+}
+
+.border {
+    border: dotted;
+    border-color: black;
+    overflow:auto;
 }
