--- a/templates/welcomePopup.html
+++ b/templates/welcomePopup.html
@@ -8,24 +8,26 @@
 
 <body ng-click = "ok()" ng-controller="HomeCtrl">
 
-<div id="header" ng-click = "ok()">
-    <div>Welcome to City Centre Living!</div>
-    <span class = "xButton" ng-click = "ok()"><ion class="ion-android-close"></ion></span>
+<div class = "border">
+    <div id="header" ng-click = "ok()">
+        <div>Welcome to City Centre Living!</div>
+        <span class = "xButton" ng-click = "ok()"><ion class="ion-android-close"></ion></span>
 
 
-</div>
+    </div>
 
-<div id="section" ng-click = "ok()">
-    <p>
-    If you live at Unite House, Culver House or Colston Street you are part of our City Centre Living Group.
-    </p><p>
-    This app allows you to browse information about what's on during Welcome Week.
-    You can see who your Senior Residents are and how to contact them, what a JCR is and how to get involved, and links to all sorts of other useful information.
-    </p><p>
-    If you have any questions you can always <a menu-close href="#/app/contactUs" ng-click="ok()">contact us.</a>
-    </p><p>
-    Have a great Welcome Week!
-    </p>
+    <div id="section" ng-click = "ok()">
+        <p>
+        If you live at Unite House, Culver House or Colston Street you are part of our City Centre Living Group.
+        </p><p>
+        This app allows you to browse information about what's on during Welcome Week.
+        You can see who your Senior Residents are and how to contact them, what a JCR is and how to get involved, and links to all sorts of other useful information.
+        </p><p>
+        If you have any questions you can always <a class = "link" menu-close href="#/app/contactUs" ng-click="ok()">contact us.</a>
+        </p><p>
+        Have a great Welcome Week!
+        </p>
+    </div>
 </div>
 
 </body>
