--- a/css/home.css
+++ b/css/home.css
@@ -102,5 +102,7 @@ img{
     font-size: 13px;
     text-decoration:none;
     display: block;
-    padding: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 4px;
 }
