--- a/templates/jcr.html
+++ b/templates/jcr.html
@@ -28,6 +28,7 @@
             <div ng-controller ='HomeCtrl'>Keep up to date with all JCR activities by joining the official <a class = "link" ng-click ="changeLinkImages('https://www.facebook.com/groups/521020464709928/','jcr')">CCL JCR Facebook</a> group.</div>
             </div>
         </div>
+        <div class = "invisible">hello<br/></div>
     </ion-content>
 </ion-view>
 </body>
