--- a/templates/menu.html
+++ b/templates/menu.html
@@ -22,7 +22,7 @@
 
   <ion-side-menu side="left">
       <ion-header-bar class="bar-stable headerBar">
-      <h1 class="title">Menu</h1>
+      <h1 align="center" class="title">Menu</h1>
       <div class = "menuLogo"><img src=img/bristolLogo.png></div>
       </ion-header-bar>
     <ion-content>
