--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -7,7 +7,7 @@
 <body>
 <ion-view view-title="Contact Us" class = "background">
   <ion-nav-buttons side="left">
-    <a class="button button-icon button-outline ion-navicon" menu-toggle="left"></a>
+    <a class="button button-icon ion-navicon" menu-toggle="left"></a>
   </ion-nav-buttons>
 
   <ion-content>
