--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,7 +10,7 @@
       <ion-nav-bar class="bar-stable">
       //menu button and slide
         <ion-nav-buttons side="left">
-          <a class="button button-icon button-outline ion-navicon" menu-toggle="left"></a>
+          <a class="button button-icon ion-navicon" menu-toggle="left"></a>
         </ion-nav-buttons>
         //home button
         <ion-nav-buttons side="right">
