--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,11 @@
 </head>
 
 <body>
-<ion-view view-title="Home" class = "background">
+<ion-view view-title="Home" class = "gap background">
+    <ion-nav-buttons side="left">
+        <a class="button button-icon ion-navicon" menu-toggle="left"></a>
+    </ion-nav-buttons>
+
     <ion-content class = "homeFrame">
         <ion-list>
 
