--- a/templates/jcr.html
+++ b/templates/jcr.html
@@ -5,16 +5,16 @@
 </head>
 
 <body>
-<ion-view view-title="JCR" class = "background">
+<ion-view view-title="JCR" class = "background gap">
     <ion-nav-buttons side="left">
-        <a class="button button-icon button-outline ion-navicon" menu-toggle="left"></a>
+        <a class="button button-icon ion-navicon" menu-toggle="left"></a>
     </ion-nav-buttons>
 
     <ion-content>
-        <div class="bar background bar-header" style = "top: -7%">
+        <div class="bar background bar-header">
             <div class="title">Junior Common Room</div>
         </div>
-        <div style = "margin: 7%; margin-top: 2%" >
+        <div class = "body" >
             <br/><br/>
             A Junior Common Room (more commonly know as the JCR) is a committee of students from City Centre Living residences: Culver House, Colston Street and Unite House.
             <br/>
