--- a/templates/jcr.html
+++ b/templates/jcr.html
@@ -10,12 +10,10 @@
         <a class="button button-icon ion-navicon" menu-toggle="left"></a>
     </ion-nav-buttons>
 
-    <ion-content>
-        <div class="bar background bar-header">
-            <div class="title">Junior Common Room</div>
-        </div>
+    <ion-content class = "background">
+        <h4 class="title">Junior Common Room</h4>
+
         <div class = "body" >
-            <br/><br/>
             A Junior Common Room (more commonly know as the JCR) is a committee of students from City Centre Living residences: Culver House, Colston Street and Unite House.
             <br/>
             <br/>
