--- a/templates/menu.html
+++ b/templates/menu.html
@@ -22,10 +22,11 @@
 
   <ion-side-menu side="left">
       <ion-header-bar class="bar-stable headerBar">
-      <div class="title">Menu</div>
+      <div class="title" align = "center" >Menu</div>
       <div class = "menuLogo"><img src=img/bristolLogo.png></div>
       </ion-header-bar>
     <ion-content>
+
       <ion-list>
         <ion-item menu-close href="#/app/home">
           Home
