--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,7 +21,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-      <ion-header-bar class="bar-stable headerBar">
+      <ion-header-bar class="bar-stable">
       <div class="title" align = "center" >Menu</div>
       <div class = "menuLogo"><img src=img/bristolLogo.png></div>
       </ion-header-bar>
