--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,8 +21,8 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-      <ion-header-bar class="bar-stable">
-      <div class="title" align = "center" >Menu</div>
+      <ion-header-bar>
+      <h4 class="title" align = "center">Menu</h4>
       <div class = "menuLogo"><img src=img/bristolLogo.png></div>
       </ion-header-bar>
     <ion-content>
