--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,9 +21,9 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-      <ion-header-bar>
-      <h4 class="title" align = "center">Menu</h4>
-      <div class = "menuLogo"><img src=img/bristolLogo.png></div>
+      <ion-header-bar align = "center">
+      <div class="title">Menu</div>
+      <!--<div class = "menuLogo"><img src=img/bristolLogo.png></div>-->
       </ion-header-bar>
     <ion-content>
 
