--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,8 +21,8 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-      <ion-header-bar align = "center">
-      <div class="title">Menu</div>
+      <ion-header-bar fixed-style>
+      <div class="title" align = "center" >Menu</div>
       <!--<div class = "menuLogo"><img src=img/bristolLogo.png></div>-->
       </ion-header-bar>
     <ion-content>
