--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,9 +21,9 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-      <ion-header-bar fixed-style>
-      <div class="title" align = "center" >Menu</div>
-      <!--<div class = "menuLogo"><img src=img/bristolLogo.png></div>-->
+      <ion-header-bar>
+      <h4 class="title title title-center">Menu</h4>
+      <div class = "menuLogo"><img src=img/bristolLogo.png></div>
       </ion-header-bar>
     <ion-content>
 
