--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,9 +20,9 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" align-title="center">
       <ion-header-bar>
-      <h4 class="title title title-center">Menu</h4>
+      <h4 class="title" align-title="center">Menu</h4>
       <div class = "menuLogo"><img src=img/bristolLogo.png></div>
       </ion-header-bar>
     <ion-content>
