--- a/templates/welcomePopup.html
+++ b/templates/welcomePopup.html
@@ -6,7 +6,8 @@
 
 </head>
 
-<body ng-click = "ok()" ng-controller="HomeCtrl">
+<body ng-controller="HomeCtrl" ng-click = "ok()">
+<div ng-click = "ok()">
 
 <div class = "border">
     <div id="header" ng-click = "ok()">
@@ -30,6 +31,7 @@
     </div>
 </div>
 
+</div>
 </body>
 </html>
 
