--- a/templates/menu.html
+++ b/templates/menu.html
@@ -38,7 +38,7 @@
           Contact Us
         </ion-item>
         <ion-item menu-close href="#/app/homeAlternative1">
-          Home Alternative 1
+          Halls of Residence
         </ion-item>
       </ion-list>
     </ion-content>
