--- a/templates/welcomePopup.html
+++ b/templates/welcomePopup.html
@@ -29,6 +29,9 @@
         Have a great Welcome Week!
         </p>
     </div>
+    <button class="button button-block button-dark" ng-click="registerWithPushService()">
+        Register with Push Service
+    </button>
 </div>
 
 </div>
