--- a/css/HallsOfResidence.css
+++ b/css/HallsOfResidence.css
@@ -1,18 +1,17 @@
 .display1 {
     margin: 0;
     padding: 0;
-    padding-bottom: 1%;
-    display: block;
     max-height: 40%;
     max-width: 100%;
     width:100%;
     height:auto;
     border: transparent;
-    margin-bottom: -1%;
+    position: relative;
+
 }
 
 .hallIMG {
-    display: block;
+    positon: absolute;
     max-height: 20%;
     max-width: 100%;
     width: 100%;
@@ -25,10 +24,10 @@
 .header{
     z-index: 1000;
     position: absolute;
-    top: 5em;
-    left: 0.5em;
+    bottom: 15px;
+    left: 10px;
     color:white;
     font-weight: bold;
     font-size: large;
-    
 }
+
