--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -1,3 +1,14 @@
-.body{
-    margin-left: 10px;
+.phoneButton{
+    position: absolute;
+    horiz-align: center;
+    width: 96%;
+    left: 2%;
+    font-size: large;
+    text-decoration: none;
+}
+.phoneIcon{
+    position: absolute;
+    font-size: x-large;
+    left:10px;
+    top:3px;
 }
