--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,21 @@
-img{
+.imgCover{
     display: block;
     max-height: 100%;
     max-width: 100%;
     width:100%;
-    height:auto;
+    height:35vw;
+}
+
+.imgAvatar{
+    display: block;
+    max-height: 100%;
+    max-width: 100%;
+    width:100%;
+    height:15vw;
 }
 
 .coverIcon{
     position:absolute;
-    left:2%;
-    top:83%;
 }
 .custom-icon{
     color:white;
@@ -17,39 +23,41 @@ img{
 
 
 .homeFrame{
-    padding-top: 45px;
+    padding-top: 11vw;
     overflow: auto;
 }
 
 .card{
     min-height:100%;
     border: groove;
-    margin-bottom: 50px;
+    margin-bottom: 12vw;
 }
 
 .cardTop{
     position: relative;
-    height: 68px;
+    height: 18vw;
 }
 
 .cardTitle{
-    font-size: 2.6vh;
+    font-size: 4vw;
     font-weight: bold;
-
+    position: absolute;
+    top:2vw;
+    left:23vw;
 }
 
 
 .avatar {
     position: absolute;
-    top: 5px;
-    left: 12px;
-    max-width: 55px;
-    max-height: 60px;
+    top: 1vw;
+    left: 3vw;
+    max-width: 16vw;
+    max-height: 19vw;
 }
 
 .item-image{
     height: 100%;
-    padding: 2px 2px;
+    padding: 1px 2px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -61,27 +69,28 @@ img{
 
 .cardCalendar{
     position: absolute;
-    top: 0%;
-    left: 3%;
-    font-size: 25px !important;
+    top: -0.5vw;
+    left: 4vw;
+    font-size: 7vw !important;
     overflow: hidden;
 }
 
 .cardDay {
-    font-size: 25px;
+    font-size: 7vw;
     position: absolute;
-    top: 2%;
-    left: 10%;
+    top: 0.5vw;
+    left: 11vw;
 }
 .reduceDiv{
     border: transparent;
     background: transparent;
-    margin-bottom: -23%;
-    margin-top: -4%;
+    margin-bottom: -23vw;
+    margin-top: -6vw;
     z-index: -1000;
+
 }
 .paddingLeft{
-    padding-left: 7px;
+    padding-left: 1vw;
 }
 .paddingLeft2{
     padding-left: 1vw;
@@ -89,42 +98,31 @@ img{
 
 .venueTop{
     color: #963620;
-    font-size: 13px;
-    text-decoration:none;
+    font-size: 3.5vw;
+    text-decoration: underline;
     display : block;
-    padding-top: 1px;
-    padding-bottom: 8px;
-    padding-right: 2px;
+    position: absolute;
+    top:7vw;
+    left:23vw;
+
 
 }
 
 .venueTopRight{
     position: absolute;
-    top: 45px;
-    right: 10px;
-    font-size: 13px;
+    top: 12vw;
+    right: 2vw;
+    font-size: 3.5vw;
 
-}
-.venueBottom{
-    font-size: 13px;
-    text-decoration:none;
-    display: block;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 4px;
 }
 
 .invisible{
     color: transparent;
 }
 
-.moreButton{
-    display : block;
-    padding:3px;
-    padding-right: 80%;
-}
+
 .facebookIcon{
     position: absolute;
-    top: 15px;
-    left: 15px;
+    top: 3vw;
+    left: 3vw;
 }
