--- a/css/shared.css
+++ b/css/shared.css
@@ -19,5 +19,9 @@
     margin-top: -20px;
 }
 
-
+.navBar{
+    background: #3b5998;
+    /*border-bottom: thick;*/
+    /*border-color: black;*/
+}
 
