--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,23 +7,23 @@
 <body>
 <ion-side-menus enable-menu-with-back-views="false" >
   <ion-side-menu-content>
-      <ion-nav-bar class="bar-stable">
+      <ion-nav-bar class="navBar">
       //menu button and slide
         <ion-nav-buttons side="left">
           <a class="button button-icon ion-navicon" menu-toggle="left"></a>
         </ion-nav-buttons>
         //home button
         <ion-nav-buttons side="right">
-          <a class="button icon-left ion-home" menu-close href="#/app/home"></a>
+          <a class="button icon-left ion-home navBar" menu-close href="#/app/home"></a>
         </ion-nav-buttons>
       </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-      <ion-header-bar>
+      <ion-header-bar class = "navBar">
       <div class="title" >Menu</div>
-      <div class = "menuLogo"><img src=img/bristolLogo.png></div>
+      <div><img class="menuLogo" src=img/CCL-red.png></div>
       </ion-header-bar>
     <ion-content>
 
