--- a/css/home.css
+++ b/css/home.css
@@ -1,21 +1,15 @@
-.imgCover{
+img{
     display: block;
     max-height: 100%;
     max-width: 100%;
     width:100%;
-    height:35vw;
-}
-
-.imgAvatar{
-    display: block;
-    max-height: 100%;
-    max-width: 100%;
-    width:100%;
-    height:15vw;
+    height:auto;
 }
 
 .coverIcon{
     position:absolute;
+    left:2%;
+    top:83%;
 }
 .custom-icon{
     color:white;
@@ -23,41 +17,39 @@
 
 
 .homeFrame{
-    padding-top: 11vw;
+    padding-top: 45px;
     overflow: auto;
 }
 
 .card{
     min-height:100%;
     border: groove;
-    margin-bottom: 12vw;
+    margin-bottom: 50px;
 }
 
 .cardTop{
     position: relative;
-    height: 18vw;
+    height: 68px;
 }
 
 .cardTitle{
-    font-size: 4vw;
+    font-size: 2.6vh;
     font-weight: bold;
-    position: absolute;
-    top:2vw;
-    left:23vw;
+
 }
 
 
 .avatar {
     position: absolute;
-    top: 1vw;
-    left: 3vw;
-    max-width: 16vw;
-    max-height: 19vw;
+    top: 5px;
+    left: 12px;
+    max-width: 55px;
+    max-height: 60px;
 }
 
 .item-image{
     height: 100%;
-    padding: 1px 2px;
+    padding: 2px 2px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -69,28 +61,27 @@
 
 .cardCalendar{
     position: absolute;
-    top: -0.5vw;
-    left: 4vw;
-    font-size: 7vw !important;
+    top: 0%;
+    left: 3%;
+    font-size: 25px !important;
     overflow: hidden;
 }
 
 .cardDay {
-    font-size: 7vw;
+    font-size: 25px;
     position: absolute;
-    top: 0.5vw;
-    left: 11vw;
+    top: 2%;
+    left: 10%;
 }
 .reduceDiv{
     border: transparent;
     background: transparent;
-    margin-bottom: -21vw;
-    margin-top: -4vw;
+    margin-bottom: -23%;
+    margin-top: -4%;
     z-index: -1000;
-
 }
 .paddingLeft{
-    padding-left: 1vw;
+    padding-left: 7px;
 }
 .paddingLeft2{
     padding-left: 1vw;
@@ -98,31 +89,42 @@
 
 .venueTop{
     color: #963620;
-    font-size: 3.5vw;
-    text-decoration: underline;
+    font-size: 13px;
+    text-decoration:none;
     display : block;
-    position: absolute;
-    top:7vw;
-    left:23vw;
-
+    padding-top: 1px;
+    padding-bottom: 8px;
+    padding-right: 2px;
 
 }
 
 .venueTopRight{
     position: absolute;
-    top: 12vw;
-    right: 2vw;
-    font-size: 3.5vw;
+    top: 45px;
+    right: 10px;
+    font-size: 13px;
 
+}
+.venueBottom{
+    font-size: 13px;
+    text-decoration:none;
+    display: block;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 4px;
 }
 
 .invisible{
     color: transparent;
 }
 
-
+.moreButton{
+    display : block;
+    padding:3px;
+    padding-right: 80%;
+}
 .facebookIcon{
     position: absolute;
-    top: 3vw;
-    left: 3vw;
+    top: 15px;
+    left: 15px;
 }
