--- a/templates/welcomePopup.html
+++ b/templates/welcomePopup.html
@@ -20,7 +20,7 @@
 
     <div id="section" ng-click = "ok()">
         <p>
-        If you live at Unite House, Culver House or Orchard Heights you are part of our City Centre Living Group.
+        If you live at Unite House, Culver House or Colston Street you are part of our City Centre Living Group.
         </p><p>
         This app allows you to browse information about what's on during Welcome Week.
         You can see who your Senior Residents are and how to contact them, what a JCR is and how to get involved, and links to all sorts of other useful information.
