--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@
     max-height: 100%;
     max-width: 100%;
     width:100%;
-    height:35vw;
+    height:120px;
 }
 
 .imgAvatar{
@@ -11,7 +11,7 @@
     max-height: 100%;
     max-width: 100%;
     width:100%;
-    height:15vw;
+    height:60px;
 }
 
 .coverIcon{
