--- a/css/HallsOfResidence.css
+++ b/css/HallsOfResidence.css
@@ -7,6 +7,7 @@
     height:auto;
     border: transparent;
     position: relative;
+
 }
 
 .hallIMG {
@@ -14,7 +15,7 @@
     max-height: 20%;
     max-width: 100%;
     width: 100%;
-    height: 40vw;
+    height: auto;
     border-bottom: groove;
     border-top: groove;
     border-width: 1px;
