--- a/templates/home.html
+++ b/templates/home.html
@@ -15,10 +15,10 @@
 
         <ion-list ng-controller="HomeCtrl as settings" ng-repeat-start="day in days" href="#/app/home/{{}}">
             <div class="background reduceDiv item item-thumbnail-left" href="#">
-                <i class="icon ion-ios-calendar-outline cardCalendar"></i>
-                <div class="cardDay">{{day.day}}</div>
+                <span class="icon ion-ios-calendar-outline cardCalendar"></span>
+                <span class="cardDay">{{day.day}}</span>
             </div>
-            <ion-slide-box>
+            <ion-slide-box class = "slideBox">
             <ion-slide ng-controller="HomeCtrl as settings" ng-repeat="card in day.events" href="#/app/home/{{}}">
 
 
@@ -27,7 +27,6 @@
 
                     <!-- Top-->
                     <div class="cardTop" style="background: transparent" >
-                        <div class="item item-thumbnail-left" style="background: transparent" href="#">
                             <a id = "avatar" ng-click="changeLinkImages(card.avatarURL, 'avatar')"><span class="avatar"><img class="imgAvatar" src={{card.avatarImg}}></span></a>
                             <span class="cardTitle">{{card.title}}</span>
                             <br/>
@@ -37,7 +36,6 @@
                             <a class="venueTopRight" id = "time">
                                 <i class="icon ion-clock"></i><span class = "paddingLeft2">{{card.time}}</span>
                             </a>
-                        </div>
                     </div>
                     <!-- Middle-->
                     <div class="item item-image coverDiv">
