--- a/templates/welcomePopup.html
+++ b/templates/welcomePopup.html
@@ -27,7 +27,7 @@
         </p><p>
         If you have any questions you can always <a class = "link" menu-close href="#/app/contactUs" ng-click="closeModal()">contact us.</a>
         </p><p>
-        Have a great Welcome Week!
+        <b>Turn notifications ON!</b> There will be <b>LIVE</b> updates throughout the week!
         </p>
     </div>
 </div>
