--- a/css/HallsOfResidence.css
+++ b/css/HallsOfResidence.css
@@ -4,7 +4,7 @@
     max-height: 40%;
     max-width: 100%;
     width:100%;
-    height:auto;
+    height:30%;
     border: transparent;
     position: relative;
 
