--- a/css/HallsOfResidence.css
+++ b/css/HallsOfResidence.css
@@ -1,10 +1,7 @@
 .display1 {
     /*margin-bottom: 1px;*/
     /*padding: 0;*/
-    max-height: 30vh;
-    min-height: 15vh;
-    width:100%;
-    height:25vh;
+    height: 10em;
     background-size: cover;
     background-position: center;
     border-bottom: groove;
