--- a/templates/welcomePopup.html
+++ b/templates/welcomePopup.html
@@ -18,7 +18,7 @@
 
     </div>
 
-    <div id="section" ng-click = "ok()">
+    <div class ="section" id="section" ng-click = "ok()">
         <p>
         If you live at Unite House, Culver House or Orchard Heights you are part of our City Centre Living Group.
         </p><p>
