--- a/css/HallsOfResidence.css
+++ b/css/HallsOfResidence.css
@@ -1,7 +1,7 @@
 .display1 {
     /*margin-bottom: 1px;*/
     /*padding: 0;*/
-    height: 10em;
+    height: 140px;
 
     background-size: cover;
     background-position: center;
@@ -30,7 +30,7 @@
     left: 10px;
     color:white;
     font-weight: bold;
-    font-size: 4vw;
+    font-size: 100%;
 }
 
 
