--- a/css/welcomePopup.css
+++ b/css/welcomePopup.css
@@ -5,7 +5,7 @@
     padding: 15%;
     z-index: 1050;
     padding-top: 30%;
-    padding-bottom: 40%;
+    padding-bottom: 20%;
     background-color: rgba(235, 227, 250, 0.5);
 }
 
@@ -41,7 +41,7 @@
     color:white;
     text-align:center;
     padding:7px;
-    font-size: 4vh;
+    font-size: 150%;
     /*border-bottom: groove;*/
 
 
@@ -57,5 +57,9 @@
     border: dotted;
     border-color: black;
     overflow:auto;
+}
+
+.section{
+    font-size: 110%;
 }
 
