--- a/css/HallsOfResidence.css
+++ b/css/HallsOfResidence.css
@@ -1,27 +1,25 @@
 .display1 {
-    /*margin-bottom: 1px;*/
-    /*padding: 0;*/
-    height: 140px;
-
-    background-size: cover;
-    background-position: center;
-    border-bottom: groove;
-    /*border-top: groove;*/
-    /*border: transparent;*/
+    margin: 0;
+    padding: 0;
+    max-height: 40%;
+    max-width: 100%;
+    width:100%;
+    height:auto;
+    border: transparent;
     position: relative;
 
 }
 
-/*.hallIMG {*/
-    /*positon: absolute;*/
-    /*max-height: 20%;*/
-    /*max-width: 100%;*/
-    /*width: 100%;*/
-    /*height: auto;*/
-    /*border-bottom: groove;*/
-    /*border-top: groove;*/
-    /*border-width: 1px;*/
-/*}*/
+.hallIMG {
+    positon: absolute;
+    max-height: 20%;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    border-bottom: groove;
+    border-top: groove;
+    border-width: 0.5px;
+}
 
 .header{
     z-index: 1000;
@@ -30,28 +28,6 @@
     left: 10px;
     color:white;
     font-weight: bold;
-    font-size: 100%;
+    font-size: large;
 }
-
-
-/*.hallIMG {*/
-    /*positon: absolute;*/
-    /*max-height: 20%;*/
-    /*max-width: 100%;*/
-    /*width: 100%;*/
-    /*height: auto;*/
-    /*border-bottom: groove;*/
-    /*border-top: groove;*/
-    /*border-width: 1px;*/
-/*}*/
-
-/*.header{*/
-    /*z-index: 1000;*/
-    /*position: absolute;*/
-    /*bottom: 15px;*/
-    /*left: 10px;*/
-    /*color:white;*/
-    /*font-weight: bold;*/
-    /*font-size: large;*/
-/*}*/
 
