--- a/css/HallsOfResidence.css
+++ b/css/HallsOfResidence.css
@@ -7,6 +7,8 @@
 .hallIMG {
     max-height: 100vh;
     max-width: 100vw;
+    height:30vh;
+    width: 100vw;
     border-bottom: groove;
     border-top: groove;
     border-width: 0.5px;
