--- a/templates/menu.html
+++ b/templates/menu.html
@@ -37,9 +37,9 @@
         <ion-item menu-close href="#/app/contactUs">
           Contact Us
         </ion-item>
-        <ion-item menu-close href="#/app/homeAlternative1">
-          Halls of Residence
-        </ion-item>
+        <!--<ion-item menu-close href="#/app/homeAlternative1">-->
+          <!--Halls of Residence-->
+        <!--</ion-item>-->
       </ion-list>
     </ion-content>
   </ion-side-menu>
